# maple-player

./: .gitignore  .prettierignore  .prettierrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: data.rs  mod.rs  request.rs  urls.rs
src-tauri/src/commands/: config.rs  mod.rs  player.rs  request.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/api/: commands.rs  data.rs  mod.rs  urls.rs
src-tauri/src/modules/config/: commands.rs  manager.rs
src-tauri/src/modules/media/: commands.rs  download.rs  mod.rs
src-tauri/src/network/: client.rs  proxy.rs
src-tauri/src/system/: window.rs
src-tauri/src/util/: audio_player.rs  config.rs  download.rs  http.rs  mod.rs  wbi.rs
src/components/: Button.tsx  Folderlist.tsx  InputField.tsx  MusicCard.tsx  MusicsContiner.tsx  Playlist.tsx  PlaylistMenu.tsx  Search.tsx
src/events/: manager.ts  system.ts
src/layout/: Bottom.tsx  Content.tsx  Drawer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
src/pages/: Download.tsx  DownloadPage.tsx  FolderPage.tsx  Home.tsx  HomePage.tsx  LyricsPage.tsx  Options.tsx  OptionsPage.tsx  QRCodePage.tsx  Search.tsx  SearchPage.tsx  User.tsx  UserPage.tsx
src/router/: routes.tsx
src/store/: account.store.ts  account.ts  account_store.ts  account_store.tsx  config.ts  config_store.ts  download.ts  folder.ts  folder_store.ts  music.ts  search.ts  search_store.ts
src/styles/: transition.css
(+33 files in other folders)
