[package]
name = "maple-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["teanli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maple_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
reqwest = { version = "0.12.12", features = ["json", "cookies", "gzip", "stream"] }
urlencoding = "2.1"
tokio = { version = "1.47.0", features = ["full"] }
futures-util = "0.3.21"
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
rodio = "0.21.1"
tauri-plugin-log = "2"
hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = "0.23.0"
anyhow = "1.0.68"
thiserror = "2.0.12"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
